-------------------------------------------------------------------------------

* Changes in Cdecl 11.13

** `restrict` of `typedef`
`restrict` is now correctly allowed on `typedef`s of pointer:

    cdecl> typdef int *pint
    cdecl> explain restrict pint p
    declare p as restricted pint

** `return` English shorthand
`return` is now accepted as a shorthand for `returning` in pseudo-English.

** Fixed core dump for `--debug`/`-d` for operator
Fixed a core dump when using the `--debug`/`-d` option for an operator.


* Changes in Cdecl 11.12

** `noexcept` for function parameters
`noexcept` is now correctly allowed for pointers to function parameter
arguments:

    c++decl> explain void g( void (*f)() noexcept )
    declare g as function (f as pointer to no-exception function returning void) returning void

** Dynamic exception specifications
These are now parsed, but either not supported by cdecl through C++14 or no
longer supported in C++17.

** Ignore leading whitespace for command completion
Previously, if there was any leading whitesplace before a command, that is:

    cdecl>  dec<TAB>
           ^
           leading whitespace

it wouldn't match: now it does.

** Fixed interactive column
The column number printed for error and warning messages while interactive is
now correct.


* Changes in Cdecl 11.11

** `using` with attributes
Now supporting `using` with attributes:

    c++decl> explain using Int [[maybe_unused]] = int
    declare Int as maybe unused type int

** Declare types with `using`
In C++11 and later, types are now declared with `using` instead of `typedef` by
default.

** `using` declarations
New `--no-using`/`-u` command-line option and `using` set option that control
whether types are declared with `using` instead of `typedef` in C++11 and
later:

    c++decl> declare pint as type pointer to int
    using pint = int*;
    c++decl> set nousing
    c++decl> declare pint as type pointer to int
    typedef int *pint;

** More K&R C types