@@ -22,6 +22,11 @@ with their complete changes, see the AUTHORS file.
 ** `return` English shorthand
 `return` is now accepted as a shorthand for `returning` in pseudo-English.
 
+** English new-style cast synonyms
+The C++ keywords `const_cast`, `dynamic_cast`, `reinterpret_cast`, and
+`static_cast` are now synonyms for their respective two-word counterparts in
+pseudo-English.
+
 ** Fixed core dump for `--debug`/`-d` for operator
 Fixed a core dump when using the `--debug`/`-d` option for an operator.
 
